# autumnus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  justfile  linked.html  result.html  sample.ex
.github/workflows/: static.yml
css/: gruvbox_material_dark.css  gruvbox_material_light.css  material_darker.css  material_deep_ocean.css  material_lighter.css  material_oceanic.css  material_palenight.css  onedark_light.css
queries/: extract_scopes.sh
queries/bash/: highlights.scm
queries/c/: highlights.scm
queries/c_sharp/: highlights.scm
queries/cmake/: highlights.scm
queries/css/: highlights.scm
queries/dockerfile/: highlights.scm
queries/elixir/: highlights.scm
queries/elm/: highlights.scm
queries/erlang/: highlights.scm
queries/fsharp/: highlights.scm
queries/heex/: highlights.scm
queries/html_tags/: highlights.scm  injections.scm
queries/json/: highlights.scm
queries/latex/: highlights.scm
queries/lua/: highlights.scm
queries/markdown_inline/: highlights.scm
queries/php_only/: highlights.scm
samples/: README.md  angular.aura_dark.html  angular.ayu_dark.html  angular.ayu_light.html  angular.catppuccin_frappe.html  angular.catppuccin_latte.html  angular.catppuccin_macchiato.html  angular.catppuccin_mocha.html  angular.cyberdream_dark.html  angular.cyberdream_light.html  angular.dracula.html  angular.dracula_soft.html  angular.edge_dark.html  angular.edge_light.html  angular.everforest_dark.html  angular.everforest_light.html  angular.flexoki_dark.html  angular.flexoki_light.html  angular.github_dark.html  angular.github_light.html  angular.gruvbox_dark.html  angular.gruvbox_light.html  angular.kanagawa_dragon.html  angular.kanagawa_lotus.html  angular.kanagawa_wave.html  angular.material_lighter.html  angular.material_oceanic.html  angular.melange_dark.html  angular.melange_light.html  angular.monokai_pro_dark.html  angular.nightfox.html  angular.nord.html  angular.onedark.html  angular.onedark_dark.html  angular.onedark_pro_dark.html  angular.onelight.html  angular.rosepine_dark.html  angular.rosepine_dawn.html  angular.solarized_autumn_dark.html  angular.solarized_autumn_light.html  (+2046 more)
src/: constants.rs  guess_language.rs  languages.rs  lib.rs  main.rs  themes.rs
themes/: README.md  aura_dark.json  aura_dark_soft_text.json  aura_soft_dark.json  aura_soft_dark_soft_text.json  ayu_dark.json  ayu_light.json  ayu_mirage.json  bamboo_dark.json  bamboo_light.json  bamboo_multiplex.json  bamboo_vulgaris.json  bluloco_dark.json  bluloco_light.json  carbonfox.json  catppuccin_frappe.json  catppuccin_latte.json  catppuccin_macchiato.json  catppuccin_mocha.json  cyberdream_dark.json  cyberdream_light.json  darkplus.json  dawnfox.json  dayfox.json  dracula.json  dracula_soft.json  duskfox.json  edge_aura.json  edge_dark.json  edge_light.json  edge_neon.json  everforest_dark.json  everforest_dark_hard.json  everforest_dark_soft.json  everforest_light.json  everforest_light_hard.json  everforest_light_soft.json  extract_themes.lua  extract_themes.sh  flexoki_dark.json  (+107 more)
(+9 files in other folders)
