[package]
name = "autumnus"
version = "0.0.0"
edition = "2021"
description = "reserved"
license = "MIT"

[dependencies]
tree-sitter = "0.25.1"
tree-sitter-highlight = "0.25.1"
tree-sitter-diff = "0.1"
tree-sitter-elixir = "0.3"
v_htmlescape = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
lazy_static = "1.5"
regex = "1.11"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
tempfile = "3.17"
