[package]
name = "autumnus"
version = "0.0.0"
edition = "2021"
description = "reserved"
license = "MIT"

[dependencies]
tree-sitter = "0.25.1"
tree-sitter-highlight = "0.25.1"
tree-sitter-diff = "0.1"
tree-sitter-elixir = "0.3"
tree-sitter-html = "0.23.2"
tree-sitter-lua = "0.2.0"
tree-sitter-rust = "0.23.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
lazy_static = "1.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
v_htmlescape = "0.15"

[features]
dev = []
