[package]
name = "autumnus"
version = "0.0.0"
edition = "2021"
description = "reserved"
license = "MIT"
include = [
  "/build.rs",
  "/src/",
  "/vendored_parsers/tree-sitter-*/**/*.c",
  "/vendored_parsers/tree-sitter-*/**/*.h",
  "/vendored_parsers/tree-sitter-*/**/*.cc",
  "/queries/**/highlights.scm",
  "/queries/**/injections.scm",
  "/queries/**/locals.scm",
  "/themes/*.json",
  "/LICENSE",
  "/README.md",
]

[dependencies]
tree-sitter = "0.25.1"
tree-sitter-highlight = "0.25.1"
tree-sitter-language = "0.1.5"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-diff = "0.1"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.12.0"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.23.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-heex = "0.8.1"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-lua = "0.2.0"
tree-sitter-objc = "3.0.2"
tree-sitter-ocaml = "0.24.0"
tree-sitter-php = "0.23.11"
tree-sitter-proto = "0.2.0"
tree-sitter-python = "0.23.6"
tree-sitter-r = "1.1.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-scala = "0.23.4"
tree-sitter-sequel = "0.3.8"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-swift = "0.7.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.0"
tree-sitter-zig = "1.1.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
lazy_static = "1.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
termcolor = "1.4"
v_htmlescape = "0.15"
tree-sitter-regex = "0.24.3"

[build-dependencies]
cc = "1"
proc-macro2 = "1"
quote = "1"
rayon = "1"

[features]
dev = []

[profile.release]
lto = "thin"

[[bin]]
name = "autumn"
path = "src/main.rs"
